2006-01-07  Anders Carlsson  <andersca@mac.com>

        Reviewed by Maciej.
        
        - fix http://bugzilla.opendarwin.org/show_bug.cgi?id=6373
        REGRESSION: JavaScript hang when comparing large array to null
        
        * kjs/object.h:
        (KJS::JSObject::isEqualToNull):
        Add new function which returns true if an object should be treated as null when
        doing comparisons.
        
        * kjs/operations.cpp:
        (KJS::equal):
        Use isEqualToNull.

2006-01-07  Alexey Proskuryakov  <ap@nypop.com>

        Reviewed by Maciej.

	    - Fix WebCore development build
	    http://bugzilla.opendarwin.org/show_bug.cgi?id=6408

        * kxmlcore/Assertions.h: Use __VA_ARGS__ in variadic macros.

2006-01-06  Maciej Stachowiak  <mjs@apple.com>

	Reviewed by Darin.

	- miscellaneous changes for 4% speedup on the JavaScript iBench
	http://bugzilla.opendarwin.org/show_bug.cgi?id=6396
	
        Changes mostly thanks to Maks Orlovich, tweaked a little by me.

        * kjs/create_hash_table: Use the same hash as the one used by Identifier.
        * kjs/function.cpp:
        (KJS::FunctionImp::processParameters): Use the new List::copyFrom
        (KJS::ActivationImp::ActivationImp): track variable while iterating
        * kjs/internal.cpp:
        (KJS::StringImp::toObject): create StringInstance directly
        * kjs/list.cpp:
        (KJS::List::copy): implement in terms of copyFrom
        (KJS::List::copyFrom): more efficient way to copy in another list
        * kjs/list.h:
        * kjs/lookup.cpp:
        (keysMatch): updated to work with identifier hash
        (findEntry): ditto
        (Lookup::findEntry): ditto
        (Lookup::find): ditto
        * kjs/lookup.h:

2006-01-06  Maciej Stachowiak  <mjs@apple.com>

	- fix development build failure from the previous checkin

        * kjs/function.cpp:
        (KJS::ActivationImp::put): Use prototype() accessor in assert.

2006-01-05  Maciej Stachowiak  <mjs@apple.com>
